--- a/test_app/Cargo.toml
+++ b/test_app/Cargo.toml
@@ -7,3 +7,11 @@ edition = "2021"
 
 [dependencies]
 agent_mcap = {path = "../agent_mcap"}
+tokio = { version = "1.26.0", features = ["sync", "time", "signal", "rt", "macros", "rt-multi-thread"] }
+chrono = "0.4.24"
+mcap = "0.6.0"
+anyhow = "1.0.70"
+serde = { version = "^1.0", features = ["derive"] }
+serde_json = "^1.0"
+async-trait = "0.1.67"
+schemars = "0.8.12"
