--- a/agent_mcap/Cargo.toml
+++ b/agent_mcap/Cargo.toml
@@ -14,3 +14,4 @@ serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 async-trait = "0.1.67"
 schemars = "0.8.12"
+log = "0.4.17"
